[PPP-004] fix: JWT token 생성 버그 수정
- 암호화, 복호화 메서드 리팩터링
- JWT 토큰 생성 시 필요한 dependency 추가